--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./videos:/app/videos  # Mount your video files here
       - ./logs:/app/logs
-      - ./config/config.docker.yaml:/app/config/config.yaml
+      - ./config/config.yaml:/app/config/config.yaml
     restart: unless-stopped
     environment:
       - LOG_LEVEL=INFO
